Make new width-6 and width-7 css variables.

--- a/web/static/css/_variables.css
+++ b/web/static/css/_variables.css
@@ -44,6 +44,8 @@
   --width-3: 4rem;
   --width-4: 6rem;
   --width-5: 8rem;
+  --width-6: 16rem;
+  --width-7: 24rem;
 
   --max-width-1: 1rem;
   --max-width-2: 2rem;
