rough admin interface for editing weights, seed data for putting initial weights in #15

--- a/web/templates/weight/index.html.eex
+++ b/web/templates/weight/index.html.eex
@@ -1,16 +1,18 @@
 <h1>All Weights</h1>
 
-<%= for weight <- @weights do %>
+<%= for [h | t] = weight <- @weights do %>
   <h3>
-    <%= weight.quote.body %>
+    <%= h.quote.body %>
   </h3>
-  <p class="blue">
-    <%= weight.service.title %>
-  </p>
-
-
-  <%= link to: weight_path(@conn, :edit, weight), class: "red f5 no-underline" do %>
-    <%= weight.weight %>
+  <%= for w <- weight do %>
+    <div class="dib">
+      <p class="blue">
+        <%= w.service.title %>
+      </p>
+      <%= link to: weight_path(@conn, :edit, w), class: "red f5 no-underline" do %>
+        <%= w.weight %>
+      <% end %>
+    </div>
   <% end %>
 
 <% end %>
