admin interface cleanup

--- a/web/templates/layout/admin.html.eex
+++ b/web/templates/layout/admin.html.eex
@@ -13,8 +13,8 @@
   </head>
 
   <body>
-    <p class="blue pa3 absolute" role="alert"><%= get_flash(@conn, :info) %></p>
-    <p class="red pa3 absolute" role="alert"><%= get_flash(@conn, :error) %></p>
+    <p class="blue pv3 ph4 ma0 right-0 top-0 absolute" role="alert"><%= get_flash(@conn, :info) %></p>
+    <p class="red pv3 ph4 ma0 right-0 top-0 absolute" role="alert"><%= get_flash(@conn, :error) %></p>
 
       <main class="ma3">
         <%= render @view_module, @view_template, assigns %>
