--- a/web/templates/service/index.html.eex
+++ b/web/templates/service/index.html.eex
@@ -1,4 +1,6 @@
-<h1>Services</h1>
+<%= render What3things.AdminView, "back.html", conn: @conn %>
+
+<h1 class="tc">Services</h1>
 
 <ul>
   <%= for service <- @services do %>
@@ -7,5 +9,3 @@
   </li>
   <% end %>
 </ul>
-
-<%= link "Create service", to: service_path(@conn, :new) %>
