--- a/web/templates/weight/edit.html.eex
+++ b/web/templates/weight/edit.html.eex
@@ -1,12 +1,13 @@
-<h1>Edit weight</h1>
+<%= link "back to weights", to: weight_path(@conn, :index), class: "no-underline blue" %>
+<h1 class="orange">Edit weight</h1>
 <%= form_for @changeset, weight_path(@conn, :update, @weight), fn f -> %>
-  <h5 class="orange">Quote</h5>
+  <h5 class="blue">Quote</h5>
   <%= @weight.quote.body %>
 
-  <h5>service</h5>
-  <%= @weight.service.body %>
+  <h5 class="green">service</h5>
+  <%= @weight.service.title %>
 
-  <h5>weight</h5>
-  <%= text_input f, :weight, placeholder: "weight" %>
+  <h5 class="orange">weight</h5>
+  <%= select f, :weight, [0.0, 0.25, 0.5, 0.75, 1.0] %>
   <%= submit "edit weight" %>
 <% end %>
