Alter services table to include ‘early_onset’ boolean and set up template and routes to alter individual services.

--- a/web/templates/service/index.html.eex
+++ b/web/templates/service/index.html.eex
@@ -6,6 +6,9 @@
   <%= for service <- @services do %>
   <li>
     <%= service.title %>
+    <%= link to: service_path(@conn, :edit, service) do %>
+      <p>Edit</p>
+    <% end %>
   </li>
   <% end %>
 </ul>
