--- a/web/templates/service/index.html.eex
+++ b/web/templates/service/index.html.eex
@@ -3,12 +3,11 @@
 <h1 class="tc">Services</h1>
 
 <ul>
-  <%= for service <- @services do %>
-  <li>
-    <%= service.title %>
-    <%= link to: service_path(@conn, :edit, service) do %>
-      <p>Edit</p>
-    <% end %>
-  </li>
+  <%= for service <- order_services(@services) do %>
+    <li>
+      <div class="">
+        <%= service.title %> -- <%= link "Edit", to: service_path(@conn, :edit, service) %>
+      </div>
+    </li>
   <% end %>
 </ul>
