implement logout functionality, services quotes weights and admin all require authenitcation to view #70

--- a/web/templates/layout/admin.html.eex
+++ b/web/templates/layout/admin.html.eex
@@ -17,8 +17,14 @@
     <p class="red pv3 ph4 ma0 right-0 top-0 absolute" role="alert"><%= get_flash(@conn, :error) %></p>
 
       <main class="ma3">
+        <%= if @admin do %>
+          <%= link to: session_path(@conn, :delete, @admin), method: "delete", class: "no-underline" do %>
+            <p class="blue ma0 mh3">logout</p>
+          <% end %>
+        <% end %>
         <%= render @view_module, @view_template, assigns %>
       </main>
 
   </body>
+  <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
 </html>
