--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -27,16 +27,9 @@
       ga('create', 'UA-4855628-21', 'auto');
       ga('send', 'pageview');
     </script>
-
     <script>
-      /**
-      * Function that tracks a click on an outbound link in Analytics.
-      * This function takes a valid URL string as an argument, and uses that URL string
-      * as the event label. Setting the transport method to 'beacon' lets the hit be sent
-      * using 'navigator.sendBeacon' in browser that support it.
-      */
-
       var trackOutboundLink = function(url) {
+        console.log("wooo");
         ga('send', 'event', 'outbound', 'click', url, {
          'transport': 'beacon',
          'hitCallback': function(){document.location = url;}
@@ -45,5 +38,6 @@
     </script>
     <script src="<%= static_path(@conn, "/js/elm.js") %>"></script>
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
+
   </body>
 </html>
