start analytics view for admins

--- a/web/templates/admin/index.html.eex
+++ b/web/templates/admin/index.html.eex
@@ -1,6 +1,6 @@
 <h1 class="tc">Admin Dashboard</h1>
 
-<div class="center flex justify-center">
+<div class="center flex justify-center flex-wrap">
   <%= link to: quote_path(@conn, :index), class: "w-30 no-underline blue mr3" do %>
     <div class="w-100 dib center mb4 tc bg-light-blue pa4">
         <h3>Quotes</h3>
@@ -14,6 +14,11 @@
   <%= link to: weight_path(@conn, :index), class: "w-30 no-underline orange" do %>
     <div class="w-100 dib center mb4 tc bg-yellow pa4">
         <h3>Weights</h3>
+    </div>
+  <% end %>
+  <%= link to: analytics_path(@conn, :index), class: "w-30 no-underline white" do %>
+    <div class="w-100 dib center mb4 tc bg-orange pa4">
+        <h3>Analytics</h3>
     </div>
   <% end %>
 </div>
