--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Assistant:300|Loved+By+The+King|Just+Another+Hand" rel="stylesheet">
     <meta name="description" content="">
     <meta name="author" content="">
 
