--- a/web/static/css/_variables.css
+++ b/web/static/css/_variables.css
@@ -123,20 +123,20 @@
   --dark-red:  #e7040f;
   --red:  #ff4136;
   --light-red:  #ff725c;
-  --orange:  #ff6300;
+  --orange: #fbc888;
   --gold:  #ffb700;
-  --yellow:  #ffd700;
+  --yellow:  #ffe85b;
   --light-yellow:  #fbf1a9;
   --purple:  #5e2ca5;
   --light-purple:  #a463f2;
   --dark-pink:  #d5008f;
   --hot-pink: #ff41b4;
   --pink:  #ff80cc;
-  --light-pink:  #ffa3d7;
+  --light-pink:  #dea1c3;
   --dark-green:  #007459;
-  --green:  #19a974;
+  --green: #b2d394;
   --light-green:  #C7FFDF;
-  --green-blue:  #89C4C5;
+  --green-blue: #a4d3df;
   --navy:  #001b44;
   --dark-blue:  #006990;
   --blue:  #0192C8;
