--- a/web/static/css/_custom.css
+++ b/web/static/css/_custom.css
@@ -79,10 +79,17 @@ body {
   transition-property: all;
 }
 
+.delay-2 {
+  transition-delay: 2s;
+}
+
+
+/* general */
+
 .touch-disabled {
   pointer-events: none;
 }
 
-.delay-2 {
-  transition-delay: 2s;
+.no-select {
+  user-select: none;
 }
