renders alternating quote background, fallback fonts for google fonts

--- a/web/static/css/_variables.css
+++ b/web/static/css/_variables.css
@@ -5,8 +5,8 @@
 :root {
   --sans-serif: Assistant, Helvetica, Arial;
   --serif: georgia, serif;
-  --handwriting: Loved By The King;
-  --title: Just Another Hand;
+  --handwriting: Loved By The King, Helvetica, Arial;
+  --title: Just Another Hand, Helvetica, Arial;
   --code: consolas, monaco, monospace;
 
   --font-size-headline: 6rem;
