--- a/web/templates/layout/admin.html.eex
+++ b/web/templates/layout/admin.html.eex
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>What3things</title>
+    <title>ParkinsonsAndMe</title>
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
   </head>
 
