--- a/web/static/css/_variables.css
+++ b/web/static/css/_variables.css
@@ -26,6 +26,10 @@
   --line-height-title: 1.25;
   --line-height-copy: 1.5;
 
+  --measure: 30em;
+  --measure-narrow: 20em;
+  --measure-wide: 34em;
+
   --spacing-none: 0;
   --spacing-extra-small: .25rem;
   --spacing-small: .5rem;
