--- a/web/templates/analytics/index.html.eex
+++ b/web/templates/analytics/index.html.eex
@@ -1,4 +1,4 @@
-<%= render What3things.AdminView, "back.html", conn: @conn %>
+<%= render ParkinsonsAndMe.AdminView, "back.html", conn: @conn %>
 
 <h1 class="tc">Analytics</h1>
 <div class="tc mt5">
