--- a/web/templates/service/index.html.eex
+++ b/web/templates/service/index.html.eex
@@ -1,4 +1,4 @@
-<%= render What3things.AdminView, "back.html", conn: @conn %>
+<%= render ParkinsonsAndMe.AdminView, "back.html", conn: @conn %>
 
 <h1 class="tc">Services</h1>
 
