--- a/web/templates/email/results.html.eex
+++ b/web/templates/email/results.html.eex
@@ -31,7 +31,7 @@
     <p>Thank you for testing <i>Parkinson's and Me</i>. You've caught it hot off the press - it's not quite live yet and we're still making improvements. We'd love to know what you thought and if you have any suggestions on how we could make it better.</p>
     <p>Can you spare two minutes to share your feedback?</p>
     <div class="flex justify-center">
-      <a href="#", class="<%= button_style %>">Fill out this quick survey</a>
+      <a href="https://goo.gl/forms/Ld8X0fSkdMF5wvlo2", class="<%= button_style %>">Fill out this quick survey</a>
       <a href="mailto:web@parkinsons.org.uk?subject=Here's some feedback on Parkinson's and Me", class="<%= button_style %>">Drop us an email</a>
     </div>
   </div>
