clean up admin dashboard

--- a/web/static/css/_variables.css
+++ b/web/static/css/_variables.css
@@ -128,7 +128,7 @@
   --red:  #ff4136;
   --light-red:  #ff725c;
   --orange: #fbc888;
-  --gold:  #ffb700;
+  --gold:  #ffb85f;
   --yellow:  #ffe85b;
   --light-yellow:  #fbf1a9;
   --purple:  #5e2ca5;
