--- a/web/templates/quote/edit.html.eex
+++ b/web/templates/quote/edit.html.eex
@@ -1,3 +1,4 @@
+<%= link "back to quotes", to: quote_path(@conn, :index), class: "no-underline blue" %>
 <h1>edit quote</h1>
 
 <%= form_for @changeset, quote_path(@conn, :update, @quote), fn f -> %>
