Center align buttons in email.

--- a/web/templates/email/results.html.eex
+++ b/web/templates/email/results.html.eex
@@ -30,7 +30,7 @@
     <h2 class="ma0">Psst... one more thing...</h2>
     <p>Thank you for testing <i>Parkinson's and Me</i>. You've caught it hot off the press - it's not quite live yet and we're still making improvements. We'd love to know what you thought and if you have any suggestions on how we could make it better.</p>
     <p>Can you spare two minutes to share your feedback?</p>
-    <div class="flex justify-center">
+    <div class="ma1">
       <a href="https://goo.gl/forms/Ld8X0fSkdMF5wvlo2" class="<%= button_style %>">Fill out this quick survey</a>
       <a href="mailto:web@parkinsons.org.uk?subject=Here's some feedback on Parkinson's and Me" class="<%= button_style %>">Drop us an email</a>
     </div>
@@ -40,11 +40,11 @@
     <p>We're the Parkinson's charity that drives better care, treatments and quality of life. Together we can bring forward the day when no one fears Parkinson's. Parksinson's UK is the operating name of the Parkinson's Disease Society of the United Kingdom, a registered charity in England, Wales (258197) and in Scotalnd (SC037544).</p>
     <p><em>Copyright © 2017 Parkinson's UK, All rights reserved.</em></p>
     <div>
-      <p><b>Our mailing address is :</b></p>
-      <p>Parkinson's UK</p>
-      <p>215 Vauxhall Bridge Road</p>
-      <p>London, England SW1V 1EJ</p>
-      <p>United Kingdom</p>
+      <p><b>Our mailing address is:</b></p>
+      <p class="ma0">Parkinson's UK</p>
+      <p class="ma0">215 Vauxhall Bridge Road</p>
+      <p class="ma0">London, England SW1V 1EJ</p>
+      <p class="ma0">United Kingdom</p>
     </div>
   </div>
 
